Mas funciones en galeria y empiezo parte favoritos
Como dice el titulo, termino lo que es galeria en si y empiezo a crear sobre el mismo html la parte de favoritos

--- a/index.html
+++ b/index.html
@@ -61,7 +61,15 @@
             <h2 id="tituloBusqueda"></h2>
             <div id="galeria"></div>
             <div id="btnVerMas">
-                <p id="verMas">Ver Más</p>
+                <img src="./assets/assets/CTA-ver-mas.svg" alt="verMas">
+            </div>
+        </section>
+        <section id="favoritos">
+            <img id="corFavPrin" src="./assets/assets/icon-favoritos.svg" alt="imagen_corazon_favoritos">
+            <h2 id="tituloFavoritos">Favoritos</h2>
+            <div id="galeriaFav"></div>
+            <div id="btnVerMasFav">
+                <img src="./assets/assets/CTA-ver-mas.svg" id="verMasFav">
             </div>
         </section>
         <section id="trendingGifos">
@@ -107,6 +115,7 @@
 
     <script src="./menu.js"></script>
     <script src="./buscador.js"></script>
+    <script src="./favoritos.js"></script>
 </body>
 
 </html>
