--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <li><a class="liNavItem" href="#">Modo Nocturno</a>
                     <div class="borderLiItems"></div>
                 </li>
-                <li><a class="liNavItem" href="#">Favoritos</a>
+                <li><a id="itemListaFavoritos" class="liNavItem" href="#">Favoritos</a>
                     <div class="borderLiItems"></div>
                 </li>
-                <li id="misGifosBtn"><a class="liNavItem" href="#">Mis GIFOS</a>
+                <li id="itemListaMisGifos"><a class="liNavItem" href="#">Mis GIFOS</a>
                     <div class="borderLiItems"></div>
                 </li>
                 <li id="btnCrearGifos"><a href="#"><img src="./assets/assets/button-crear-gifo.svg" alt=""></a></li>
@@ -64,12 +64,20 @@
                 <img src="./assets/assets/CTA-ver-mas.svg" alt="verMas">
             </div>
         </section>
-        <section id="favoritos">
+        <section id="sectionFavoritos">
             <img id="corFavPrin" src="./assets/assets/icon-favoritos.svg" alt="imagen_corazon_favoritos">
             <h2 id="tituloFavoritos">Favoritos</h2>
             <div id="galeriaFav"></div>
             <div id="btnVerMasFav">
                 <img src="./assets/assets/CTA-ver-mas.svg" id="verMasFav">
+            </div>
+        </section>
+        <section id="sectionMisGifos">
+            <img id="icon_MisGifos" src="./assets/assets/icon-mis-gifos.svg" alt="imagen_cara_feliz">
+            <h2 id="tituloMisGifos">Mis GIFOS</h2>
+            <div id="galeriaMisGifos"></div>
+            <div id="btnVerMasMisGifos">
+                <img src="./assets/assets/CTA-ver-mas.svg" id="verMasMisGifos">
             </div>
         </section>
         <section id="trendingGifos">
@@ -116,6 +124,7 @@
     <script src="./menu.js"></script>
     <script src="./buscador.js"></script>
     <script src="./favoritos.js"></script>
+    <script src="./misGifos.js"></script>
 </body>
 
 </html>
