--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
             </div>
             <div id="etiquetasInicio">
                 <p id="buscadorEtiquetasHome">Trending:</p>
-                <p id="etiquetasEjemplos"><br id="brTextoTrending"></p>
+                <div id="etiquetasEjemplos">
+                
+                </div>
             </div>
         </section>
         <section id="busqueda">
@@ -113,7 +115,7 @@
                     </div>
                     <div id="botonesImgAmpliada">
                         <img id="btnFavImgAmpliada" src="./assets/assets/icon-fav-hover.svg" alt="imagenBotonFavoritos">
-                        <img id="btnDescargarImgAmpliada" src="./assets/assets/icon-download.svg"
+                        <img id="btnDescargarImgAmpliada"  src="./assets/assets/icon-download.svg"
                             alt="imagenBotonDescarga">
                     </div>
                 </div>
