Arreglado modo mobile
Se soluciono el sistema de favoritos

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
             <div id="separador"></div>
             <h2 id="tituloBusqueda"></h2>
             <div id="galeria"></div>
+            <div id="busquedaFallida">
+                <img id="imgBusquedaFallida" src="./assets/assets/icon-busqueda-sin-resultado.svg"
+                    alt="icon-busqueda-sin-resultado">
+                <p id="textoBusquedaFallida">Intenta con otra búsqueda</p>
+            </div>
             <div id="btnVerMas">
                 <img src="./assets/assets/CTA-ver-mas.svg" alt="verMas">
             </div>
@@ -148,6 +153,7 @@
     <script src="./misGifos.js"></script>
     <script src="carrusel.js"></script>
     <script src="./hovers.js"></script>
+    <script src="./imgAmpliada.js"></script>
 
 </body>
 
