--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
     <script src="./buscador.js"></script>
     <script src="./favoritos.js"></script>
     <script src="./misGifos.js"></script>
-    <script src="carrusel.js"></script>
+    <script src="./carrusel.js"></script>
     <script src="./hovers.js"></script>
-    <script src="./imgAmpliada.js"></script>
+    <script src="./imgsFunctions.js"></script>
 
 </body>
 
