--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
             <div id="btnVerMasMisGifos">
                 <img src="./assets/assets/CTA-ver-mas.svg" id="verMasMisGifos">
             </div>
+            <div id="noGifos">
+                <img id="imgNoGifos" src="./assets/assets/icon-mis-gifos-sin-contenido.svg"
+                    alt="imagen cara feliz dos pero mas grande">
+                <p id="textoNoGifos">¡Anímate a crear tu primer GIFO!</p>
+            </div>
         </section>
         <section id="trendingGifos">
             <div id="textosTrending">
@@ -208,6 +213,27 @@
                 </div>
             </div>
         </section>
+        <section id="sectionImgAmplificadaDesktop">
+            <img id="imgCloseDesktop" src="./assets/assets/close.svg" alt="imagen cruz">
+            <div id="contImgDesktop">
+                <img id="imgFlechaIzqDesktop" src="./assets/assets/button-slider-left.svg"
+                    alt="imagen flecha izquierda">
+                <img id="imgAmpliadaDesktop" src="" alt="imagen ampliada en modo desktop">
+                <img id="imgFlechaDerDesktop" src="./assets/assets/Button-Slider-right.svg" alt="imagen flecha derecha">
+            </div>
+            <div id="infoImgAmplaiadaDesktop">
+                <div id="textosImgAmpladaDesktop">
+                    <p id="usuarioImgDesktop">user</p>
+                    <p id="tituloImgDesktop">titulo GIFO</p>
+                </div>
+                <div id="btnsImgAmpladaDesktop">
+                    <img id="corazonAmpliadoDesktop" src="./assets/assets/icon-fav.svg"
+                        alt="imagen de corazon sin apintar">
+                    <img id="descargaAmplaidaDesktop" src="./assets/assets/icon-download.svg"
+                        alt="imagen de icono de descarga">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer id="footer">
@@ -237,6 +263,7 @@
     <script src="./hovers.js"></script>
     <script src="./imgsFunctions.js"></script>
     <script src="./creador.js"></script>
+    <script src="./imgAmpliDesktop.js"></script>
 
 </body>
 
