--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p id="textoBusquedaFallida">Intenta con otra búsqueda</p>
             </div>
             <div id="btnVerMas">
-                <img src="./assets/assets/CTA-ver-mas.svg" alt="verMas">
+                <img id="imgVerMas" src="./assets/assets/CTA-ver-mas.svg" alt="verMas">
             </div>
         </section>
         <section id="sectionFavoritos">
@@ -206,7 +206,8 @@
                         <p id="tituloGif">titulo</p>
                     </div>
                     <div id="botonesImgAmpliada">
-                        <img id="btnFavImgAmpliada" src="./assets/assets/icon-fav-hover.svg" alt="imagenBotonFavoritos">
+                        <img id="btnFavImgAmpliada" onclick="favImagenAmpliada(this)"
+                            src="./assets/assets/icon-fav-hover.svg" alt="imagenBotonFavoritos">
                         <img id="btnDescargarImgAmpliada" src="./assets/assets/icon-download.svg"
                             alt="imagenBotonDescarga">
                     </div>
